changed deployement to add toleration

--- a/workloads/kube-burner/workloads/cluster-density/deployment.yml
+++ b/workloads/kube-burner/workloads/cluster-density/deployment.yml
@@ -100,4 +100,7 @@ spec:
         operator: "Exists"
         effect: "NoExecute"
         tolerationSeconds: 900
-
+      - key: "node.kubernetes.io/edge"
+        operator: "Exists"
+        effect: "NoSchedule"
+        tolerationSeconds: 900
