--- a/workloads/kube-burner/workloads/etcd-perf/my-large-sec.yaml
+++ b/workloads/kube-burner/workloads/etcd-perf/my-large-sec.yaml
@@ -3,13 +3,13 @@ cat <<EOF | oc apply -f -
 apiVersion: v1
 kind: Secret
 metadata:
-  name: $SECRET_NAME
-  namespace: $NAMESPACE
+  name: ${SECRET_NAME}
+  namespace: ${NAMESPACE}
 type: Opaque
 data:
-  ssh-private-key: $SSH_PRIVATE_KEY
-  ssh-public-key: $SSH_PUBLIC_KEY
-  token: $TOKEN_VALUE
-  tls.crt: $CERTIFICATE
-  tls.key: $PRIVATE_KEY
+  ssh-private-key: ${SSH_PRIVATE_KEY}
+  ssh-public-key: ${SSH_PUBLIC_KEY}
+  token: ${TOKEN_VALUE}
+  tls.crt: ${CERTIFICATE}
+  tls.key: ${PRIVATE_KEY}
 EOF
